<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipes_rv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>


